2009-08-16  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (value_from_str_with_parser): we were using the return
	value from this method to be "v has been set to a value", but this
	isn't enough state.  We also need to know if the
	caller (dependency_object_set_attributes, specifically) should
	continue on or skip the attribute after it's called us.  So, we
	add a "bool *v_set" parameter, and change the return value to
	"false = skip, true = continue processing."  We return false in
	only 1 case right now, if a double-typed value is to be parsed
	from an empty string.  This fixes the Klotski demo, which has
	<TranslateTransform X=""> in its xaml. Also, fix the g_strstrip
	usage to also deal properly with leading spaces, and stop
	duplicating "g_free (s); return true;" - just break there, and let
	the blanket free/return at the end of the method handle it.
	(dependency_object_set_attributes): simplify the {} handling, and
	stop leaking the string value of the attribute when we pass it to
	managed.

	r: andreia
	
2009-08-15  Larry Ewing  <lewing@novell.com>

	* mediaelement.cpp (Render): use the same logic we used in image
	here to always adjust the paint rect when stretch != StretchNone.

	r: andreia

2009-08-15  Larry Ewing  <lewing@novell.com>

	* shape.cpp (MeasureOverride): Stretch to the proper width when
	available size in not infinite.  Avoid using infinite dimesions as
	constraints for Uniform stretches.

	Fixes Header stretching in playboy an improves DRT #210.

	r: jeff
	
2009-08-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Quiet some debug spew.

	r: andreia

2009-08-14  Larry Ewing  <lewing@novell.com>

	* grid.cpp (MeasureOverride): properly use min and max.

	Fixes regression in DRT #319 from new table code

	r: kangaroo

2009-08-14  Larry Ewing  <lewing@novell.com>

	* media.cpp: always adjust our paint rectangle when Stretch !=
	StretchNone.

	Fixes DRT #516 and the regression in #422

	r: toshok
